--- a/app/templates/SettingsPanel.hbs
+++ b/app/templates/SettingsPanel.hbs
@@ -18,12 +18,12 @@
       </div>
     {{/each}}
   </div>
-</form>
+</div>
 <div class="header">
   Manage Subscriptions
   <div class="remove">&times;</div>
 </div>
-<form class="settings-form subs-form">
+<div class="settings-form subs-form">
   <input class="class-input" type="text" placeholder="Class"></input>
   <input class="instance-input" type="text" placeholder="Instance" value="*"></input>
   <input class="recipient-input" type="text" placeholder="Recipient"></input>
@@ -44,4 +44,4 @@
       {{/each}}
     </table>
   </div>
-</form>
+</div>
