Mark zsig remove buttons by index.

--- a/app/templates/SettingsPanel.hbs
+++ b/app/templates/SettingsPanel.hbs
@@ -11,7 +11,7 @@
     {{#each zsigs}}
       <div class="zsig">
         {{this}}
-        <div class="remove-button remove-zsig" data-zsig="{{this}}">
+        <div class="remove-button remove-zsig" data-zsig-index="{{@index}}">
           &times;
         </div>
         <div style="clear:both"></div>
