Use an <input> for zsig entry.

--- a/app/sass/_subscriptions.scss
+++ b/app/sass/_subscriptions.scss
@@ -61,6 +61,11 @@
       width: 32.5%;
     }
 
+    &.zsig-form input#new-zsig {
+      width: 100%;
+      display: block;
+    }
+
     .btn {
       @include button-variant($primary-btn-color, $primary-btn-bg);
       width: 100%;
