--- a/app/templates/SettingsPanel.hbs
+++ b/app/templates/SettingsPanel.hbs
@@ -2,7 +2,7 @@
   Signatures
 </div>
 <div class="settings-form zsig-form">
-  <textarea id="new-zsig"></textarea>
+  <input id="new-zsig">
   <button class="btn add-zsig">Add signature</button>
   <label>
     Current Signatures
