Remove text-indent: -42px hack
Each message was having six spaces prepended to it because templates
are whitespace-sensitive.  Aside from being dumb, this was confusing
copy and paste.

Signed-off-by: Anders Kaseorg <andersk@mit.edu>

--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -19,8 +19,7 @@
   </div>
   <div class="message-block">
     <pre class="message">
-      {{ztext message}}
-    </pre>
+{{ztext message}}</pre>
     <div class="bottom-row">
       <div class="signature">
         {{ztext signature}}
