--- a/app/templates/NavBar.hbs
+++ b/app/templates/NavBar.hbs
@@ -9,7 +9,7 @@
     <i class="fa fa-question-circle"></i>
   </div>
   <div class="user-info">
-      <span>{{username}}</span> <img class="gravatar" src="{{gravatar}}">
+      <span>{{username}}</span> <img class="gravatar" src="{{gravatarNameRealm username realm}}">
   </div>
   <div class="add-pane {{#if limitReached}}disabled{{/if}}">
     <i class="fa fa-plus"></i><span>&nbsp;&nbsp;New Pane</span>
