--- a/app/templates/SubscriptionPanel.hbs
+++ b/app/templates/SubscriptionPanel.hbs
@@ -16,7 +16,7 @@
   <table cellspacing="0" class="subs-table">
     {{#each models}}
       <tr>
-        <td class="class-td" data-class="{{attributes.class}}">{{attributes.class}}</td>
+        <td class="class-td" data-class="{{attributes.classKey}}">{{attributes.class}}</td>
         <td>{{attributes.instance}}</td>
         <td>{{attributes.recipient}}</td>
         <td class="close-td" data-cid="{{cid}}">&times;</td>
