--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -22,7 +22,7 @@
       <td> Toggle subscription panel </td>
     </tr>
     <tr>
-      <td> Alt+n </td>
+      <td> Alt+t </td>
       <td> Open new pane </td>
     </tr>
     <tr>
