--- a/app/sass/_filter.scss
+++ b/app/sass/_filter.scss
@@ -49,6 +49,24 @@
         display: inline-block;
         padding-left: 3px;
       }
+
+      .fancy {
+        border-left-width: 15px;
+        border-left-style: solid;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        opacity: 0.6;
+
+        &.up {
+          border-bottom: $compose-filter-bar-height solid transparent;
+        }
+
+        &.down {
+          border-top: $compose-filter-bar-height solid transparent;
+        }
+      }
     }
 
     .filters {
