--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -1,6 +1,6 @@
 .message-view {
   width: 100%;
-  max-width: 700px;
+  max-width: $msg-max-width;
   margin: auto;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
