--- a/app/sass/_theme.scss
+++ b/app/sass/_theme.scss
@@ -6,6 +6,7 @@ $primary-btn-bg: rgb(49, 120, 211);
 $primary-btn-color: #EEE;
 
 $msg-header-height: 20px;
+$msg-max-width: 700px;
 $gravatar-size: 32px;
 
 $compose-filter-bar-height: 30px;
