--- a/app/sass/_filter.scss
+++ b/app/sass/_filter.scss
@@ -102,7 +102,7 @@
     margin: auto;
     margin-top: 15px;
 
-    input, textarea { 
+    input, textarea{ 
       width: 90%;
       font-size: 14px;
       padding: 3px 5px;
@@ -112,6 +112,31 @@
       margin-left: 5%;
       margin-right: 5%;
       font-family: $monospace-font;
+    }
+
+    .twitter-typeahead {
+      width: 100%;
+
+      .tt-dropdown-menu {
+        position: absolute;
+        top: 84% !important;
+        z-index: 11 !important;
+        left: 5% !important;
+        right: 3.5% !important;
+        background-color: white;
+        color: black;
+        max-height: 80px;
+        overflow-y: scroll;
+        border: 1px solid grey;
+      }
+
+      p {
+        margin: 0px;
+        padding-left: 5px;
+        border-bottom: 1px solid grey;
+        font-size: 14px;
+        cursor: pointer;
+      }
     }
 
     .set-filters {
