--- a/app/sass/_filter.scss
+++ b/app/sass/_filter.scss
@@ -58,6 +58,7 @@
         bottom: 0;
         left: 0;
         opacity: 0.6;
+        height: 0px;
 
         &.up {
           border-bottom: $compose-filter-bar-height solid transparent;
