Spawn panes to right of parent pane

--- a/app/sass/_messagePane.scss
+++ b/app/sass/_messagePane.scss
@@ -28,6 +28,10 @@
     white-space: normal;
     padding-top: $compose-filter-bar-height;
 
+    &.not-loaded {
+      opacity: 0.5;
+    }
+
     &:hover, &.persist {
       .filter-bar {
         opacity: 0.8;
