--- a/app/sass/_compose.scss
+++ b/app/sass/_compose.scss
@@ -79,5 +79,14 @@
       float: right;
       margin-right: 5%;
     }
+
+    .error {
+      font-size: 12px;
+      float: left;
+      margin-left: 5%;
+      margin-top: 5px;
+      color: lighten(red, 10%);
+      display: none;
+    }
   }
 }
