--- a/app/templates/ComposeBar.hbs
+++ b/app/templates/ComposeBar.hbs
@@ -10,7 +10,10 @@
     <input class="instance-input" type="text" placeholder="Instance" value="{{composeFields.instance}}"></input>
     <input class="recipient-input" type="text" placeholder="Recipient" value="{{composeFields.recipient}}"></input>
     <textarea class="content-input" rows="{{#if onMobile}}2{{else}}6{{/if}}" placeholder="Type your message here">{{composeFields.content}}</textarea>
-    <button class="btn send">Send</button>
+    <div class="bottom-row">
+      <span class="error">Warning: not subscribed to specified class.</span>
+      <button class="btn send">Send</button>
+    </div>
   </div>
 {{else}}
   <div class="single-bar">
