Home/end hotkeys

--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -42,11 +42,11 @@
       <td> Move selected pane </td>
     </tr>
     <tr>
-      <td> &gt; </td>
+      <td> &gt;/End </td>
       <td> Go to bottom </td>
     </tr>
     <tr>
-      <td> &lt; </td>
+      <td> &lt;/Home </td>
       <td> Go to top </td>
     </tr>
     <tr>
