--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -1,204 +1,226 @@
-.message-view {
+.message-view-full {
   width: 100%;
   max-width: $msg-max-width;
   margin: auto;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  border: 1px solid #BBB;
-  border-top: none;
 
   &.positioned {
-    border: 2px solid black;
+    .message-view {
+      border: 2px solid black;
+    }
   }
 
-  .header{
+  .stark-mark {
+    width: 100%;
+    text-align: center;
+    height: 30px;
+    line-height: 30px;
+    color: #BBB;
+    font-style: italic;
+    text-transform: uppercase;
+    font-size: 12px;
+  }
+
+  .message-view {
     box-sizing: border-box;
-    height: $msg-header-height;
-    line-height: $msg-header-height - 1px;
-    background-color: #CCC;
-    position: relative;
-    font-size: 14px;
+    -moz-box-sizing: border-box;
+    border: 1px solid #BBB;
+    border-top: none;
 
-    &:hover {
-      .time.from-now {
-        opacity: 0;
+    &.starked {
+      border-top: 1px solid #BBB;
+    }
+
+    .header{
+      box-sizing: border-box;
+      height: $msg-header-height;
+      line-height: $msg-header-height - 1px;
+      background-color: #CCC;
+      position: relative;
+      font-size: 14px;
+
+      &:hover {
+        .time.from-now {
+          opacity: 0;
+        }
+
+        .time.absolute {
+          opacity: 1;
+        }
       }
 
-      .time.absolute {
+      .time {
+        position: absolute;
+        right: 0;
+        padding-right: 5px;
         opacity: 1;
-      }
-    }
+        transition: opacity 0.2s 0.5s;
 
-    .time {
-      position: absolute;
-      right: 0;
-      padding-right: 5px;
-      opacity: 1;
-      transition: opacity 0.2s 0.5s;
-
-      &.absolute {
-        opacity: 0;
-      }
-    }
-
-    .chat-header {
-      display: inline-block;
-      float: left;
-      background-color: none;
-      cursor: pointer;
-      padding-left: 5px;
-      padding-right: 3px;
-      box-sizing: border-box;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-
-    .msg-class {
-      background-color: #BBB;
-      display: inline-block;
-      position: relative;
-      padding-left: 5px;
-      padding-right: 3px;
-      box-sizing: border-box;
-      float: left;
-      cursor: pointer;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-
-    .divider {
-      display: inline-block;
-      border-left: 5px solid #BBB;
-      border-bottom: $msg-header-height solid transparent;
-      width: 0;
-      height: 0;
-      float: left;
-    }
-
-    .msg-instance {
-      display: inline-block;
-      padding-left: 3px;
-      cursor: pointer;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-
-    .fancy {
-      border-left-width: 8px;
-      border-left-style: solid;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      opacity: 0.6;
-
-      &.up {
-        border-bottom: $msg-header-height solid transparent;
-      }
-
-      &.down {
-        border-top: $msg-header-height solid transparent;
-      }
-    }
-  }
-
-  .content {
-    display: table-row;
-
-    &.outgoing {
-      .sender {
-        background-color: $outgoing-sender-color;
-      }
-    }
-
-    .sender {
-      text-align: center;
-      height: 100%;
-      display: table-cell;
-      vertical-align: middle;
-      padding: 0 5px;
-      background-color: #EEE;
-      font-size: 12px;
-      position: relative;
-      z-index: 2;
-      width: 75px;
-      min-width: 75px;
-      box-sizing: border-box;
-      word-wrap: break-word;
-      font-weight: 700;
-
-      .gravatar {
-        border: 1px solid #BBB;
-        width: $gravatar-size;
-        height: $gravatar-size;
-      }
-
-      .not-verified {
-        text-transform: uppercase;
-        color: red;
-        font-size: 9px;
-      }
-    }
-
-    .message-block {
-      display: table-cell;
-      width: 100%;
-
-      .message {
-        padding: 3px;
-        margin-bottom: 16px;
-        word-break: break-all;
-        word-wrap: break-word;
-        margin-top: 0px;
-        white-space: pre-wrap;
-        font-size: 14px;
-        font-family: $monospace-font;
-
-        // Otherwise our scroll handler has a bad time getting past big messages.
-        // If your message is this big, well, shit.
-        max-height: 4000px;
-        overflow-y: hidden;
-
-        a {
-          text-decoration: none;
+        &.absolute {
+          opacity: 0;
         }
       }
 
-      .bottom-row {
-        padding: 5px;
-        font-size: 12px;
-        height: 15px;
+      .chat-header {
+        display: inline-block;
+        float: left;
+        background-color: none;
+        cursor: pointer;
+        padding-left: 5px;
+        padding-right: 3px;
+        box-sizing: border-box;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .msg-class {
+        background-color: #BBB;
+        display: inline-block;
         position: relative;
+        padding-left: 5px;
+        padding-right: 3px;
+        box-sizing: border-box;
+        float: left;
+        cursor: pointer;
 
-        .signature {
-          overflow: hidden;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          width: 300px; // FUCK THIS THING
-          float: left;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .divider {
+        display: inline-block;
+        border-left: 5px solid #BBB;
+        border-bottom: $msg-header-height solid transparent;
+        width: 0;
+        height: 0;
+        float: left;
+      }
+
+      .msg-instance {
+        display: inline-block;
+        padding-left: 3px;
+        cursor: pointer;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .fancy {
+        border-left-width: 8px;
+        border-left-style: solid;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        opacity: 0.6;
+
+        &.up {
+          border-bottom: $msg-header-height solid transparent;
         }
 
-        .controls {
-          position: absolute;
-          bottom: 5px;
-          right: 5px;
-          @include user-select(none);
+        &.down {
+          border-top: $msg-header-height solid transparent;
+        }
+      }
+    }
 
-          i.fa {
-            line-height: 15px;
-            cursor: pointer;
-            margin-right: 10px;
-            font-size: 16px;
-            color: #888;
+    .content {
+      display: table-row;
 
-            &:hover {
-              color: black;
+      &.outgoing {
+        .sender {
+          background-color: $outgoing-sender-color;
+        }
+      }
+
+      .sender {
+        text-align: center;
+        height: 100%;
+        display: table-cell;
+        vertical-align: middle;
+        padding: 0 5px;
+        background-color: #EEE;
+        font-size: 12px;
+        position: relative;
+        z-index: 2;
+        width: 75px;
+        min-width: 75px;
+        box-sizing: border-box;
+        word-wrap: break-word;
+        font-weight: 700;
+
+        .gravatar {
+          border: 1px solid #BBB;
+          width: $gravatar-size;
+          height: $gravatar-size;
+        }
+
+        .not-verified {
+          text-transform: uppercase;
+          color: red;
+          font-size: 9px;
+        }
+      }
+
+      .message-block {
+        display: table-cell;
+        width: 100%;
+
+        .message {
+          padding: 3px;
+          margin-bottom: 16px;
+          word-break: break-all;
+          word-wrap: break-word;
+          margin-top: 0px;
+          white-space: pre-wrap;
+          font-size: 14px;
+          font-family: $monospace-font;
+
+          // Otherwise our scroll handler has a bad time getting past big messages.
+          // If your message is this big, well, shit.
+          max-height: 4000px;
+          overflow-y: hidden;
+
+          a {
+            text-decoration: none;
+          }
+        }
+
+        .bottom-row {
+          padding: 5px;
+          font-size: 12px;
+          height: 15px;
+          position: relative;
+
+          .signature {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            width: 300px; // FUCK THIS THING
+            float: left;
+          }
+
+          .controls {
+            position: absolute;
+            bottom: 5px;
+            right: 5px;
+            @include user-select(none);
+
+            i.fa {
+              line-height: 15px;
+              cursor: pointer;
+              margin-right: 10px;
+              font-size: 16px;
+              color: #888;
+
+              &:hover {
+                color: black;
+              }
             }
           }
         }
