--- a/app/templates/MessageView.hbs
+++ b/app/templates/MessageView.hbs
@@ -1,33 +1,39 @@
-<div class="header" style="background-color:{{lightClassColor classKeyBase}}">
-  {{#if isPersonal}}
-    <div class="chat-header">{{messageConvoHeader conversation instance}}</div>
-  {{else}}
-    <div class="msg-class" style="background-color:{{classColor classKeyBase}}">{{class}}</div>
-    <div class="divider" style="border-left: 5px solid {{classColor classKeyBase}}"></div>
-    <div class="msg-instance">{{instance}}</div>
-  {{/if}}
-  <span class="time from-now">{{prettyTime}}</span>
-  <span class="time absolute">{{absoluteTime time}}</span>
-</div>
-<div class="content {{#if isSentByUser}}outgoing{{/if}}">
-  <div class="sender">
-    <img class="gravatar" src="{{gravatar sender}}"><br>
-    <span>{{shortZuser sender}}</span>
-    {{#unless auth}}
-      <br><span class="not-verified">Not Verified</span>
-    {{/unless}}
+{{#if stark}}
+  <div class="stark-mark">
+    --- {{duration stark}} ---
   </div>
-  <div class="message-block">
-    <pre class="message">
-{{ztext message}}</pre>
-    <div class="bottom-row">
-      <div class="signature">
-        {{ztext signature}}
-      </div>
-      <div class="controls">
-        <i class="fa fa-quote-right quote"></i>
-        <i class="fa fa-reply reply"></i>
-        <i class="fa fa-envelope pm"></i>
+{{/if}}
+<div class="message-view">
+  <div class="header" style="background-color:{{lightClassColor classKeyBase}}">
+    {{#if isPersonal}}
+      <div class="chat-header">{{messageConvoHeader conversation instance}}</div>
+    {{else}}
+      <div class="msg-class" style="background-color:{{classColor classKeyBase}}">{{class}}</div>
+      <div class="divider" style="border-left: 5px solid {{classColor classKeyBase}}"></div>
+      <div class="msg-instance">{{instance}}</div>
+    {{/if}}
+    <span class="time from-now">{{prettyTime}}</span>
+    <span class="time absolute">{{absoluteTime time}}</span>
+  </div>
+  <div class="content {{#if isSentByUser}}outgoing{{/if}}">
+    <div class="sender">
+      <img class="gravatar" src="{{gravatar sender}}"><br>
+      <span>{{shortZuser sender}}</span>
+      {{#unless auth}}
+        <br><span class="not-verified">Not Verified</span>
+      {{/unless}}
+    </div>
+    <div class="message-block">
+      <pre class="message">{{ztext message}}</pre>
+      <div class="bottom-row">
+        <div class="signature">
+          {{ztext signature}}
+        </div>
+        <div class="controls">
+          <i class="fa fa-quote-right quote"></i>
+          <i class="fa fa-reply reply"></i>
+          <i class="fa fa-envelope pm"></i>
+        </div>
       </div>
     </div>
   </div>
