Extract modal stuff into another SCSS file.

--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -1,5 +1,5 @@
-<div class="modal-overlay"/>
-<div class="modal">
+<div id="modal-overlay"/>
+<div id="hotkey-help" id="modal">
   <div class="header">
     <div class="title">
       Roost Hotkeys
