--- a/app/sass/_settings.scss
+++ b/app/sass/_settings.scss
@@ -1,7 +1,8 @@
 .settings-panel {
   transition: width 0.4s;
   background: #EEE;
-  overflow-y: scroll;
+  overflow-y: hidden;
+  overflow-x: hidden;
 
   position: fixed;
   z-index: 15;
@@ -43,6 +44,13 @@
   div.settings-form {
     padding: 5px;
     margin-top: 5px;
+    position: relative;
+    height: 40%;
+    box-sizing: border-box;
+
+    .form-top {
+      height: 105px;
+    }
 
     input, textarea {
       font-size: 16px;
@@ -98,6 +106,7 @@
     font-size: 16px;
     margin-bottom: 5px;
     display: block;
+    border-bottom: 1px solid #BBB;
   }
 
   .remove-button {
@@ -115,13 +124,16 @@
   .item-list {
     padding-left: 5px;
     padding-right: 5px;
+
+    position: absolute;
+    top: 115px;
+    bottom: 5px;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   .subs-table-container {
-    height: 60%;
-    max-height: 500px;
-    overflow-y: scroll;
-    border-top: 1px solid #BBB;
+    overflow-y: auto;
     border-bottom: 1px solid #BBB;
 
     .subs-table {
