--- a/app/templates/SettingsPanel.hbs
+++ b/app/templates/SettingsPanel.hbs
@@ -3,11 +3,13 @@
   <div class="remove">&times;</div>
 </div>
 <div class="settings-form zsig-form">
-  <input id="new-zsig">
-  <button class="btn add-zsig">Add signature</button>
-  <label>
-    Current Signatures
-  </label>
+  <div class="form-top">
+    <input id="new-zsig" placeholder="Zsig">
+    <button class="btn add-zsig">Add signature</button>
+    <label>
+      Current Signatures
+    </label>
+  </div>
   <div class="zsigs item-list">
     {{#each zsigs}}
       <div class="zsig-line">
@@ -28,22 +30,24 @@
   Manage Subscriptions
 </div>
 <div class="settings-form subs-form">
-  <input class="class-input" type="text" placeholder="Class"></input>
-  <input class="instance-input" type="text" placeholder="Instance" value="*"></input>
-  <input class="recipient-input" type="text" placeholder="Recipient"></input>
-  <br>
-  <button class="btn subscribe">Subscribe</button>
-  <label>
-    Current Subscriptions
-  </label>
-  <div class="subs-table-container">
-    <table cellspacing="0" class="subs-table item-list">
+  <div class="form-top">
+    <input class="class-input subs-input" type="text" placeholder="Class"></input>
+    <input class="instance-input subs-input" type="text" placeholder="Instance" value="*"></input>
+    <input class="recipient-input subs-input" type="text" placeholder="Recipient"></input>
+    <br>
+    <button class="btn subscribe">Subscribe</button>
+    <label>
+      Current Subscriptions
+    </label>
+  </div>
+  <div class="subs-table-container item-list">
+    <table cellspacing="0" class="subs-table">
       {{#each subscriptions.models}}
         <tr>
           <td class="class-td" data-class="{{attributes.classKey}}">{{attributes.class}}</td>
           <td>{{attributes.instance}}</td>
           <td>{{attributes.recipient}}</td>
-          <td class="remove-button" data-cid="{{cid}}">&times;</td>
+          <td class="remove-button close-td" data-cid="{{cid}}">&times;</td>
         </tr>
       {{/each}}
     </table>
