Update hotkey help

--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -78,6 +78,14 @@
       <td> PM selected message sender </td>
     </tr>
     <tr>
+      <td> Alt+n </td>
+      <td> Filter message class </td>
+    </tr>
+    <tr>
+      <td> Alt+shift+n </td>
+      <td> Filter message class/instance </td>
+    </tr>
+    <tr>
       <td> ? </td>
       <td> Show this box </td>
     </tr>
