Slight styling fix

--- a/app/sass/_messagePane.scss
+++ b/app/sass/_messagePane.scss
@@ -19,7 +19,7 @@
 
   .message-pane-view {
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     border-right: 1px solid #333;
     box-sizing: border-box;
