--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -1,13 +1,4 @@
-<div id="modal-overlay"/>
-<div id="hotkey-help" id="modal">
-  <div class="header">
-    <div class="title">
-      Roost Hotkeys
-    </div>
-    <div class="close-help">
-      &times;
-    </div>
-  </div>
+<div id="hotkey-help">
   <table class="content" cellspacing="0">
     <tr>
       <th> Hotkey </th>
