Be smarter about div layout to avoid repaints.
This is related to #61 and technically fixes it, but it leads to
significantly reduced performance when scrolling and triggering loads. I
don't know why.

--- a/app/sass/_messagePane.scss
+++ b/app/sass/_messagePane.scss
@@ -29,6 +29,16 @@
     padding-top: $compose-filter-bar-height;
     transition: opacity 0.2s ease-in;
 
+    .message-pane-view-inner {
+      height: 100%;
+      overflow-y: auto;
+
+      // Create a new stacking context.
+      position: relative;
+      z-index: 1;
+
+    }
+
     &.not-loaded {
       opacity: 0.5;
     }
