Fix spelling of "filters"

--- a/app/templates/HotkeyHelp.hbs
+++ b/app/templates/HotkeyHelp.hbs
@@ -46,7 +46,7 @@
     </tr>
     <tr>
       <td> Shift+f </td>
-      <td> Show fitlers </td>
+      <td> Show filters </td>
     </tr>
     <tr>
       <td> z </td>
