Fix multiple small bugs
Fix issues with filter display, message display, filter updating, and saving state.

--- a/app/sass/_components.scss
+++ b/app/sass/_components.scss
@@ -95,6 +95,10 @@
     max-height: 80px;
     overflow-y: scroll;
     border: 1px solid grey;
+
+    .tt-cursor {
+      background: lighten($primary-btn-bg, 20%);
+    }
   }
 
   p {
