--- a/app/templates/FilterBar.hbs
+++ b/app/templates/FilterBar.hbs
@@ -1,5 +1,5 @@
 <div class="top-bar" style="background:{{filterBarBackgroundColor filters}};color:{{filterBarColor filters}}">
-  <div class="title">
+  <div class="title {{filterTitleMod filters}}">
     {{filterHeader filters}}
   </div>
   {{#unless showFilters}}
