Disable inertial 'overscrolling' on OS X.

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -28,3 +28,10 @@ html, body {
     display: none !important;
   }
 }
+
+// Disable scrolling the container; this means that rapidly scrolling a message
+// pane won't wind up causing the outer element to scroll and look bad on OSes
+// with 'inertial' scroll.
+html {
+  overflow: hidden;
+}
