--- a/app/sass/_filter.scss
+++ b/app/sass/_filter.scss
@@ -1,7 +1,9 @@
 .filter-bar {
-  top: 0;
-  position: absolute;
-  left: 0;
+  -webkit-order: 1;
+  order: 1;
+  -webkit-flex: 0 0 auto;
+  flex: 0 1 auto;
+
   width: 100%;
   background-color: #555;
   color: white;
