--- a/app/sass/_messagePane.scss
+++ b/app/sass/_messagePane.scss
@@ -29,16 +29,14 @@
     transition: opacity 0.2s ease-in;
 
     display: -webkit-flex;
-    display: -ms-flex;
     display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    -webkit-flex-flow: column nowrap;
+    flex-flow: column nowrap;
 
     .message-pane-view-inner {
-      -webkit-flex: 1;
-      -ms-flex: 1;
-      flex: 1;
+      -webkit-order: 2;
+      order: 2;
+      flex: 1 1 0px;
       overflow-y: auto;
 
       // Create a new stacking context.
