Go back to absolutely-positioned bars.
This breaks #54 again but there are lots of reasons to prefer absolute
positioning for the bars (we don't need to resize the inner message pane
div, we can 'fade out' bars to show messages underneath, etc.).

--- a/app/sass/_compose.scss
+++ b/app/sass/_compose.scss
@@ -1,8 +1,6 @@
 .compose-bar {
-  -webkit-order: 3;
-  order: 3;
-  -webkit-flex: 0 0 auto;
-  flex: 0 1 auto;
+  position: absolute;
+  bottom: 0;
 
   width: 100%;
   background-color: #555;
