--- a/app/sass/_filter.scss
+++ b/app/sass/_filter.scss
@@ -1,8 +1,6 @@
 .filter-bar {
-  -webkit-order: 1;
-  order: 1;
-  -webkit-flex: 0 0 auto;
-  flex: 0 1 auto;
+  position: absolute;
+  top: 0;
 
   width: 100%;
   background-color: #555;
