--- a/app/sass/_messagePane.scss
+++ b/app/sass/_messagePane.scss
@@ -43,6 +43,12 @@
       height: 100%;
       overflow-y: auto;
 
+      // Hide the scroll bar. overflow-y: hidden disables scrolling entirely.
+      &::-webkit-scrollbar {
+        display: none;
+      }
+      -ms-overflow-style: none;
+
       // Create a new stacking context.
       position: relative;
       z-index: 1;
