--- a/app/sass/_message.scss
+++ b/app/sass/_message.scss
@@ -178,7 +178,10 @@
         .message {
           padding: 3px;
           margin-bottom: 16px;
-          word-break: break-all;
+          // Nothing that I can find says that this is a valid value for
+          // word-break, but setting it to 'normal' makes certain zephyrs have a
+          // font-size about twice what they should be in iOS 7 Safari.
+          word-break: break-word;
           word-wrap: break-word;
           margin-top: 0px;
           white-space: pre-wrap;
