--- a/app/templates/SettingsPanel.hbs
+++ b/app/templates/SettingsPanel.hbs
@@ -1,4 +1,26 @@
-<div class="header">
+<div class="modal-overlay"></div>
+<div class="modal-content">
+  <div class="title-bar">
+    <div class="title">Settings</div>
+    <div class="tab-container">
+      <div class="settings-tab" data-content="general">General</div>
+      <div class="settings-tab" data-content="subscriptions">Subscriptions</div>
+      <div class="settings-tab" data-content="zsigs">ZSigs</div>
+      <div class="settings-tab" data-content="hotkeys">Hotkeys</div>
+      <div class="settings-tab" data-content="help">Help</div>
+    </div>
+    <div class="settings-close">&times;</div>
+  </div>
+  <div class="tab-content">
+    <div class="settings-content" data-content="general"></div>
+    <div class="settings-content" data-content="subscriptions"></div>
+    <div class="settings-content" data-content="zsigs"></div>
+    <div class="settings-content" data-content="hotkeys"></div>
+    <div class="settings-content" data-content="help"></div>
+  </div>
+</div>
+
+{{!-- <div class="header">
   Signatures
   <div class="remove">&times;</div>
 </div>
@@ -52,4 +74,4 @@
       {{/each}}
     </table>
   </div>
-</div>
+</div> --}}
