--- a/app/templates/SubscriptionSettingsView.hbs
+++ b/app/templates/SubscriptionSettingsView.hbs
@@ -1,1 +1,19 @@
-SUBSCRIPTION TODO
+<div class="settings-form subs-form">
+  <input class="class-input subs-input" type="text" placeholder="Class"></input>
+  <input class="instance-input subs-input" type="text" placeholder="Instance" value="*"></input>
+  <input class="recipient-input subs-input" type="text" placeholder="Recipient"></input>
+  <br>
+  <button class="btn subscribe">Subscribe</button>
+</div>
+<div class="subs-table-container item-list">
+  <table cellspacing="0" class="subs-table">
+    {{#each subscriptions.models}}
+      <tr>
+        <td class="class-td" data-class="{{attributes.classKey}}">{{attributes.class}}</td>
+        <td>{{attributes.instance}}</td>
+        <td>{{attributes.recipient}}</td>
+        <td class="close-td" data-cid="{{cid}}">&times;</td>
+      </tr>
+    {{/each}}
+  </table>
+</div>
